[Fix] the upload modal centering on mobile version.

--- a/frontend/src/style/Upload.scss
+++ b/frontend/src/style/Upload.scss
@@ -51,4 +51,10 @@
   .modal-dialog {
     max-width: 100vw;
   }
+  .modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: (-50%, 0) !important;
+  }
 }
